# trello-reminder

./: Cargo.toml  Makefile  app.tf
.github/workflows/: Makefile  deploy.dhall  deploy.yml
src/: main.rs  secrets.rs  trello.rs
