[package]
name = "trello-reminder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.6.1"
reqwest = { version = "0.11.11", default-features = false, features = ["rustls-tls", "json"] }
rusoto_core = { version = "0.48.0", default-features = false, features = ["rustls"] }
rusoto_secretsmanager = { version = "0.48.0", default-features = false, features = ["rustls"] }
serde = "1.0.144"
serde_json = "1.0.85"
tokio = { version = "1.21.1", features = ["rt", "rt-multi-thread", "macros"] }

async-slack-web-api = { git = "https://github.com/Pctg-x8/async-slack-web-api", default-features = false, features = ["rustls"] }
rand = "0.8.5"

[dev-dependencies]
rusty-hook = "0.11.2"
